--- a/package.json
+++ b/package.json
@@ -19,21 +19,32 @@
   "scripts": {
     "dev": "nextron",
     "build": "nextron build",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "lint": "eslint . --ext .jsx,.js --ignore-pattern '.next/' --ignore-pattern '.node_modules/' --ignore-pattern 'app/' --ignore-pattern 'dist/'",
+    "lint:fix": "eslint . --fix --ext .jsx,.js --ignore-pattern '.next/' --ignore-pattern '.node_modules/' --ignore-pattern 'app/' --ignore-pattern 'dist/'"
   },
   "dependencies": {
+    "electron": "^11.0.2",
     "electron-serve": "^1.0.0",
-    "electron-store": "^6.0.1"
+    "electron-store": "^6.0.1",
+    "next": "9.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.7",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-typescript": "^7.12.7",
     "babel-loader": "^8.2.1",
-    "electron": "^11.0.2",
     "electron-builder": "^22.9.1",
-    "next": "9.5.1",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "nextron": "^5.15.11",
+    "prettier": "^2.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "webpack": "4.44.0"
