--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "electron-serve": "^1.0.0",
     "electron-store": "^6.0.1",
     "next": "9.5.1",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "swr": "^0.3.9",
+    "twit": "^2.2.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.7",
