--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "electron": "^11.0.2",
     "electron-serve": "^1.0.0",
     "electron-store": "^6.0.1",
+    "moment": "^2.29.1",
     "next": "9.5.1",
     "prop-types": "^15.7.2",
     "swr": "^0.3.9",
